flx a possible fault and provide a missing nvinc adjustment for defined
variables; in solvers2.tgz, add missing code for defined variables
used in just one constraint.

20210819
  mqcheckv.c in both solvers.tgz and solvers2.tgz:  fix a bug
involving a defined variable that references another defined variable
and that is shared by two or more objectives or constraints.  In the
example that exposed the bug, the solver faulted.

20210924
  mqpcheckv.c and nqpcheck.c in both solvers.tgz and solvers2.tgz:
fix a rarely seen bug (fault) arising when cancellation cause a term
to completely vanish.

20211001
  getstub.c in both solvers.tgz and solvers2.tgz:  arrange for
", liccheck(yyyymmdd)" to appear in the output produced by
show_version_ASL(oi) when getstub.c is compiled with
-DLICCHECKVERSION=yyyymmdd .

20211029
  readsol.c in both solvers.tgz and solvers2.tgz: fix a bug with
binary .sol files and no constraints.

20211109
  func_add.c in both solvers.tgz and solvers2.tgz:  quietly ignore
inappropriate addfunc_ASL calls unless compiled with
-DCOMPLAIN_AT_BAD_FTYPE.  This allows AMPL and solvers to use a .dll
that includes some functions that can only be used in an AMPL session
-- the solvers quietly ignore them.

20220520
  Quietly reduce absurdly large precisions in printf formats.  For
example, "%.410g" faulted.  Now it works and "%.500g" is quietly
reduced to "%.415g".
  Fix a small performance bug in misc.c -- only need to invoke
zerograd_chk once.

20221103
  mqpcheckv.c, nqpcheck.c in both solvers.tgz and solvers2.tgz:  fix a
fault that arose under when there are rare cancellations.  Example:

	var x >= 1; var u; var w;
	minimize o: (w + (1 - w))*(x - u) + u;	# really just x

20221115
  misc.c in both solvers.tgz and solvers2.tgz:  recant change of
20220520, which had removed a sometimes needed call.

20230310
  fgh_read.c: a tweak that only matters to pedants.
  suf_sos.c: adjust nranges (= asl->i.nranges_) when SOS2 constraints
are handled.