@@ -9,7 +9,7 @@ arithchk.c	63b0185	6532
 asl.h	1fe3527a	42925
 asl_pfg.h	6483336	1268
 asl_pfgh.h	49b5a53	1288
-asldate.c	b7805f9	29
+asldate.c	158d058e	29
 atof.c	1fabc7d3	1747
 auxinfo.c	1a3c8690	1488
 avltree.c	10aeaa58	11346
@@ -63,7 +63,7 @@ getstub.c	e05acb35	13344
 getstub.h	f626e91d	7079
 htcl.c	6522bee	2279
 indic_cons.c	f1f99a7c	13970
-jac0dim.c	fa3a80f2	6824
+jac0dim.c	7d6131d	7033
 jac2dim.c	c2d8eba	1694
 jac2dim.h	81b97e7	1982
 jacdim.c	e2ace738	1794
